# confidentialmind-mcp-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  config.json  db_migration.sql  docker-compose.yaml  logs.txt  main.py  mcp_config.json  mcp_integration.py  postgres_integration.py  pyproject.toml
api/: database.py  main.py
docker/: agent.Dockerfile  api.Dockerfile  baserag-mcp.Dockerfile  obsidian-mcp.Dockerfile  postgres-mcp.Dockerfile  rag-mcp.Dockerfile
guides/: confidentialmind.md  mcp_containerization.md  mcp_server_guide.md  observability_guide.md
src/: __init__.py
src/agent/: README.md  __init__.py  agent.py  api.py  connectors.py  conversation_manager.py  database.py  llm.py  logging_config.py  main.py  module_transport.py  observability.py  state.py  transport.py
src/agent/logging/: __init__.py  decorators.py  trace_context.py
src/connectors/: __init__.py  cm_llm_connector.py  cm_mcp_connector.py  confidentialmind.py  llm.py
src/core/: __init__.py  agent.py  agent_db_connection.py  agent_db_migration.py
src/mcp/: README.md  __init__.py  mcp_client.py  mcp_protocol.py  obsidian_mcp_server.py  postgres_mcp_server.py  rag_mcp_server.py
src/mcp/postgres/: README.md  __init__.py  __main__.py  database.py  postgres_server.py  server.py  settings.py  utils.py  validators.py
src/shared/: __init__.py
src/tools/: __init__.py
tekton/: agent-pipeline-run.yaml  mcp-baserag-pipeline-run.yaml  mcp-postgres-pipeline-run.yaml
tests/: logger.py  test_agent_api.py  test_agent_cli.py  test_baserag_mcp.py  test_postgres_mcp.py
(+22 files in other folders)
