[project]
name = "confidentialmind-mcp-agent"
version = "0.1.0"
description = "CM Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiohttp>=3.11.18",
  "asyncpg>=0.30.0",
  "backoff>=2.2.1",
  "black>=25.1.0",
  "confidentialmind-core==0.1.8",
  "fastapi>=0.115.12",
  "fastmcp>=2.4.0",
  "greenlet>=3.1.1",
  "httpx>=0.28.1",
  "isort>=6.0.1",
  "langgraph>=0.3.21",
  "mcp[cli]>=1.7.1",
  "mypy>=1.15.0",
  "openai>=1.72.0",
  "psycopg2-binary>=2.9.10",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.1",
  "python-dotenv>=1.1.0",
  "requests>=2.32.3",
  "ruff>=0.11.2",
  "sqlalchemy>=2.0.40",
  "structlog>=25.3.0",
  "typer>=0.15.3",
  "uvicorn>=0.34.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
select = ["E", "F", "I"]
ignore = []
line-length = 100
target-version = "py310"

[dependency-groups]
dev = []
